// ABOUTME: Protocol Buffer definitions for Qollective gRPC transport layer
// ABOUTME: Defines envelope message structures with comprehensive metadata support

syntax = "proto3";

package qollective.v1;

import "google/protobuf/any.proto";

// Version compatibility: Field numbers 1-15 are reserved for most frequently used fields
// for optimal encoding. Fields 16+ are for less common metadata sections.

// ================================================================================================
// CORE ENVELOPE STRUCTURES
// ================================================================================================

// Qollective envelope message containing metadata and either data or error
// This is the root message for all gRPC communications using Qollective protocol
message Envelope {
  // Core metadata (required) - most frequently accessed, optimized field numbers 1-5
  Meta meta = 1;
  
  // Response payload - exactly one of data or error must be present
  oneof response {
    // Successful response data (any structured data)
    google.protobuf.Any data = 2;
    // Error response details
    Error error = 3;
  }
}

// Core metadata section with timing, identity, and service chain information
message Meta {
  // Core required fields (1-10) - most frequently used for performance
  
  // ISO 8601 timestamp when the response was generated (required)
  string timestamp = 1;
  
  // Unique request identifier for tracing and correlation (required)
  string request_id = 2;
  
  // API version in semantic versioning format (required)
  string version = 3;
  
  // Request processing duration in milliseconds with microsecond precision
  optional double duration = 4;

  // Multi-tenant identifier for the original user's tenant context (tenant isolation and context propagation)
  optional string tenant = 5;

  // Chain of services that processed this request (nested envelope tracking)
  repeated ServiceChainEntry service_chain = 6;

  // Delegation context for on-behalf-of operations (optional, config-driven)
  optional OnBehalfOfMeta on_behalf_of = 7;

  // Optional metadata sections (11-20) - config-driven inclusion

  // Security context and user information (optional, config-driven)
  optional SecurityMeta security = 11;

  // Debug information (optional, typically development only)
  optional DebugMeta debug = 12;

  // Performance metrics for monitoring and optimization (optional, config-driven)
  optional PerformanceMeta performance = 13;

  // Infrastructure and operational monitoring information (optional, config-driven)
  optional MonitoringMeta monitoring = 14;

  // Distributed tracing information following OpenTelemetry standards (optional, config-driven)
  optional TracingMeta tracing = 15;
  
  // Custom meta extensions for service-specific data (optional)
  map<string, google.protobuf.Any> extensions = 16;
}

// Service chain entry for tracking nested envelope processing
message ServiceChainEntry {
  // Name of the service in the chain (required)
  string service_name = 1;
  
  // Version of the service (required)
  string service_version = 2;
  
  // Request ID generated by this service (required)
  string request_id = 3;
  
  // When this service processed the request (required)
  string timestamp = 4;
  
  // Processing time for this service in milliseconds (optional)
  optional double duration = 5;
}

// ================================================================================================
// ERROR HANDLING STRUCTURES
// ================================================================================================

// Error information following RFC 7807 Problem Details standard
message Error {
  // Machine-readable error code for programmatic handling (required)
  string code = 1;
  
  // Human-readable error message suitable for display to users (required)
  string message = 2;
  
  // Additional structured error details for debugging and context (optional)
  map<string, google.protobuf.Any> details = 3;
  
  // Error trace identifier for debugging and log correlation (optional)
  optional string trace = 4;
  
  // When the error occurred (optional)
  optional string timestamp = 5;
  
  // Request path where the error occurred (optional)
  optional string path = 6;
  
  // HTTP method used when error occurred (optional)
  optional string method = 7;
  
  // HTTP status code associated with this error (optional)
  optional int32 status = 8;
  
  // Suggested retry delay in seconds for retryable errors (optional)
  optional int32 retry_after = 9;
}

// ================================================================================================
// DELEGATION METADATA STRUCTURES
// ================================================================================================

// Delegation context when one user or service acts on behalf of another, potentially across tenant boundaries
message OnBehalfOfMeta {
  // The original user or entity being acted upon (belongs to the tenant specified in meta.tenant)
  string original_user = 1;

  // The user or service performing the action on behalf of the original user
  string delegating_user = 2;

  // The tenant context of the delegating user (may differ from the original user's tenant in meta.tenant)
  string delegating_tenant = 3;
}

// ================================================================================================
// SECURITY METADATA STRUCTURES
// ================================================================================================

// Security context and user information
message SecurityMeta {
  // Current authenticated user identifier
  optional string user_id = 1;
  
  // User session identifier for this authentication session
  optional string session_id = 2;
  
  // Authentication method used for this request
  optional AuthMethod auth_method = 3;
  
  // User permissions for this request in format 'resource:action'
  repeated string permissions = 4;
  
  // Client IP address (IPv4 or IPv6)
  optional string ip_address = 5;
  
  // Client user agent string
  optional string user_agent = 6;

  // User roles assigned for this session
  repeated string roles = 7;

  // When the authentication token expires
  optional string token_expires_at = 8;
}

// Authentication method enumeration
enum AuthMethod {
  AUTH_METHOD_UNSPECIFIED = 0;
  AUTH_METHOD_OAUTH2 = 1;
  AUTH_METHOD_JWT = 2;
  AUTH_METHOD_API_KEY = 3;
  AUTH_METHOD_BASIC = 4;
  AUTH_METHOD_SAML = 5;
  AUTH_METHOD_OIDC = 6;
  AUTH_METHOD_NONE = 7;
}

// ================================================================================================
// DEBUG METADATA STRUCTURES
// ================================================================================================

// Debug information (typically development only - never include in production)
message DebugMeta {
  // Whether detailed tracing was enabled for this request
  optional bool trace_enabled = 1;
  
  // Database queries executed during request processing
  repeated DbQuery db_queries = 2;
  
  // Memory usage metrics during request processing
  optional MemoryUsage memory_usage = 3;
  
  // Stack trace information for debugging (errors only)
  optional string stack_trace = 4;
  
  // Relevant environment variables (never include secrets)
  map<string, string> environment_vars = 5;
  
  // HTTP request headers for debugging (sanitized of auth tokens)
  map<string, string> request_headers = 6;
  
  // Log level used for this request
  optional LogLevel log_level = 7;
  
  // Performance profiling data for this request
  optional ProfilingData profiling_data = 8;
}

// Database query execution information
message DbQuery {
  // Database query statement (sanitized of sensitive data) (required)
  string query = 1;
  
  // Query execution time in milliseconds (required)
  double duration = 2;
  
  // Number of rows affected by the query (optional)
  optional int32 rows_affected = 3;
  
  // Database name or identifier (optional)
  optional string database = 4;
}

// Memory usage metrics
message MemoryUsage {
  // Heap memory used in bytes
  optional int64 heap_used = 1;
  
  // Total heap memory in bytes
  optional int64 heap_total = 2;
  
  // External memory usage in bytes
  optional int64 external = 3;
}

// Performance profiling data
message ProfilingData {
  // CPU time used in milliseconds
  optional double cpu_time = 1;
  
  // Wall clock time in milliseconds
  optional double wall_time = 2;
  
  // Number of memory allocations
  optional int64 allocations = 3;
}

// Log level enumeration
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_TRACE = 1;
  LOG_LEVEL_DEBUG = 2;
  LOG_LEVEL_INFO = 3;
  LOG_LEVEL_WARN = 4;
  LOG_LEVEL_ERROR = 5;
}

// ================================================================================================
// PERFORMANCE METADATA STRUCTURES
// ================================================================================================

// Performance metrics for monitoring and optimization
message PerformanceMeta {
  // Total database query time in milliseconds
  optional double db_query_time = 1;
  
  // Total number of database queries executed
  optional int32 db_query_count = 2;
  
  // Cache hit ratio (0.0 to 1.0)
  optional double cache_hit_ratio = 3;
  
  // Cache operation statistics
  optional CacheOperations cache_operations = 4;
  
  // Memory allocated in bytes for this request
  optional int64 memory_allocated = 5;
  
  // Peak memory usage in bytes during request processing
  optional int64 memory_peak = 6;
  
  // CPU usage percentage (0.0 to 1.0) during request processing
  optional double cpu_usage = 7;
  
  // Network latency in milliseconds for external calls
  optional double network_latency = 8;
  
  // Performance data for external service calls
  repeated ExternalCall external_calls = 9;
  
  // Number of garbage collection cycles during request
  optional int32 gc_collections = 10;
  
  // Time spent in garbage collection in milliseconds
  optional double gc_time = 11;
  
  // Number of threads used for request processing
  optional int32 thread_count = 12;
}

// Cache operation statistics
message CacheOperations {
  // Number of cache hits
  optional int32 hits = 1;
  
  // Number of cache misses
  optional int32 misses = 2;
  
  // Number of cache sets
  optional int32 sets = 3;
}

// External service call performance data
message ExternalCall {
  // External service name (required)
  string service = 1;
  
  // Call duration in milliseconds (required)
  double duration = 2;
  
  // Call result status (required)
  CallStatus status = 3;
  
  // Endpoint called (optional)
  optional string endpoint = 4;
}

// Call status enumeration
enum CallStatus {
  CALL_STATUS_UNSPECIFIED = 0;
  CALL_STATUS_SUCCESS = 1;
  CALL_STATUS_ERROR = 2;
  CALL_STATUS_TIMEOUT = 3;
}

// ================================================================================================
// MONITORING METADATA STRUCTURES
// ================================================================================================

// Infrastructure and operational monitoring information
message MonitoringMeta {
  // Server instance identifier for tracking requests across instances
  optional string server_id = 1;
  
  // Datacenter, region, or availability zone identifier
  optional string datacenter = 2;
  
  // Application build version or commit hash
  optional string build_version = 3;
  
  // Deployment identifier for tracking releases
  optional string deployment_id = 4;
  
  // Server instance type or configuration
  optional string instance_type = 5;
  
  // Load balancer identifier that routed this request
  optional string load_balancer = 6;
  
  // Environment where the service is running
  optional Environment environment = 7;
  
  // Cluster or orchestration platform identifier
  optional string cluster_id = 8;
  
  // Kubernetes namespace or logical grouping
  optional string namespace = 9;
  
  // Current health status of the service instance
  optional HealthStatus health_status = 10;
  
  // Service uptime in seconds
  optional double uptime = 11;
}

// Environment enumeration
enum Environment {
  ENVIRONMENT_UNSPECIFIED = 0;
  ENVIRONMENT_DEVELOPMENT = 1;
  ENVIRONMENT_STAGING = 2;
  ENVIRONMENT_TESTING = 3;
  ENVIRONMENT_PRODUCTION = 4;
  ENVIRONMENT_CANARY = 5;
}

// Health status enumeration
enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}

// ================================================================================================
// TRACING METADATA STRUCTURES
// ================================================================================================

// Distributed tracing information following OpenTelemetry standards
message TracingMeta {
  // Distributed trace identifier (128-bit hex or UUID format)
  optional string trace_id = 1;
  
  // Current span identifier (64-bit hex)
  optional string span_id = 2;
  
  // Parent span identifier (64-bit hex)
  optional string parent_span_id = 3;
  
  // Tracing baggage key-value pairs for cross-service context
  map<string, string> baggage = 4;
  
  // Trace sampling rate (0.0 to 1.0)
  optional double sampling_rate = 5;
  
  // Whether this trace is being sampled
  optional bool sampled = 6;
  
  // W3C trace state header value for vendor-specific tracing data
  optional string trace_state = 7;
  
  // Name of the operation being traced
  optional string operation_name = 8;
  
  // OpenTelemetry span kind
  optional SpanKind span_kind = 9;
  
  // Span status information
  optional SpanStatus span_status = 10;
  
  // Span tags/attributes for detailed tracing
  map<string, TraceValue> tags = 11;
}

// OpenTelemetry span kind enumeration
enum SpanKind {
  SPAN_KIND_UNSPECIFIED = 0;
  SPAN_KIND_SERVER = 1;
  SPAN_KIND_CLIENT = 2;
  SPAN_KIND_PRODUCER = 3;
  SPAN_KIND_CONSUMER = 4;
  SPAN_KIND_INTERNAL = 5;
}

// Span status information
message SpanStatus {
  // Span status code (required)
  SpanStatusCode code = 1;
  
  // Optional status message
  optional string message = 2;
}

// Span status code enumeration
enum SpanStatusCode {
  SPAN_STATUS_CODE_UNSPECIFIED = 0;
  SPAN_STATUS_CODE_OK = 1;
  SPAN_STATUS_CODE_ERROR = 2;
  SPAN_STATUS_CODE_TIMEOUT = 3;
}

// Trace value for tags/attributes (supports string, number, boolean)
message TraceValue {
  oneof value {
    string string_value = 1;
    double number_value = 2;
    bool bool_value = 3;
  }
}

// ================================================================================================
// gRPC SERVICE DEFINITIONS
// ================================================================================================

// Qollective gRPC service supporting both unary and streaming envelope communication
// All methods work with Envelope messages for consistent metadata propagation
service QollectiveService {
  // Unary call: Single request -> Single response
  // Most common pattern for request/response communication
  rpc UnaryCall(Envelope) returns (Envelope);
  
  // Server streaming: Single request -> Stream of responses
  // Useful for long-running operations that produce multiple results
  rpc ServerStreaming(Envelope) returns (stream Envelope);
  
  // Client streaming: Stream of requests -> Single response
  // Useful for uploading data or batching operations
  rpc ClientStreaming(stream Envelope) returns (Envelope);
  
  // Bidirectional streaming: Stream of requests <-> Stream of responses
  // Useful for real-time communication and interactive workflows
  rpc BidirectionalStreaming(stream Envelope) returns (stream Envelope);
  
  // Health check endpoint for service discovery and monitoring
  // Returns current service status and metadata
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ================================================================================================
// HEALTH CHECK STRUCTURES
// ================================================================================================

// Health check request message
message HealthCheckRequest {
  // Service name to check (optional, defaults to checking the current service)
  optional string service = 1;
}

// Health check response message
message HealthCheckResponse {
  // Overall health status
  HealthCheckStatus status = 1;
  
  // Detailed status information
  optional string message = 2;
  
  // Current service metadata
  optional Meta meta = 3;
  
  // Component-specific health status
  map<string, HealthCheckStatus> components = 4;
}

// Health check status enumeration
enum HealthCheckStatus {
  HEALTH_CHECK_STATUS_UNSPECIFIED = 0;
  HEALTH_CHECK_STATUS_SERVING = 1;
  HEALTH_CHECK_STATUS_NOT_SERVING = 2;
  HEALTH_CHECK_STATUS_UNKNOWN = 3;
  HEALTH_CHECK_STATUS_DEGRADED = 4;
}

